# Thermal_Image_Procession

./: CMakeLists.txt  README.md  Tracking.cpp  Tracking.h  canny.cpp  canny.h  main.cpp
